# taynac

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  Dockerfile  Makefile  README  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
etc/taynac/: config-generator.conf  policy-generator.conf
taynac/: __init__.py  app.py  extensions.py  policy.py  version.py  wsgi.py
taynac/api/v1/: __init__.py
taynac/api/v1/resources/: base.py  message.py
taynac/api/v1/schemas/: message.py
taynac/cmd/: api.py  manage.py
taynac/common/: config.py  policies.py
taynac/drivers/: base.py  freshdesk.py
taynac/message/: api.py
taynac/message/drivers/: base.py  freshdesk.py  logging.py
taynac/tests/etc/: taynac.conf
taynac/tests/unit/: base.py
taynac/tests/unit/api/v1/: test_message.py
taynac/tests/unit/drivers/: test_freshdesk.py
taynac/tests/unit/message/: test_api.py
taynac/tests/unit/message/drivers/: test_freshdesk.py
