[metadata]
name = taynac
author = ARDC
author_email = coreservices@ardc.edu.au
summary = Nectar messageing service
description_file = README.md
home_page = https://github.com/NeCTAR-RC/taynac
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[entry_points]
taynac.message_driver =
    freshdesk = taynac.message.drivers.freshdesk:FreshDeskDriver
    logging = taynac.message.drivers.logging:LoggingDriver
oslo.config.opts =
    taynac = taynac.common.config:list_opts
