[metadata]
name = taynac
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Nectar messageing service
description_file =
    README.md
keywords = taynac
home_page = https://github.com/NeCTAR-RC/taynac
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[entry_points]
console_scripts =
    taynac-api = taynac.cmd.api:main
    taynac-manage = taynac.cmd.manage:cli

taynac.message_driver =
    freshdesk = taynac.message.drivers.freshdesk:FreshDeskDriver
    logging = taynac.message.drivers.logging:LoggingDriver
oslo.config.opts =
    taynac = taynac.common.config:list_opts

[pbr]
skip_changelog=true
skip_authors=true
